style.css
* {
	margin: 0;
}

body {
	background-color: darkgrey;
	height: 100%;
}

.container {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
}

.calculator {
	width: 300px;
	height: 500px;
	background: #fff;
	box-shadow: 0px 0px 8px 8px gray;
	top: 10%;
	position: absolute;
	border-radius: 1%;
}

.result {
	height: 25%;
	border-bottom: 1px solid grey
}

.history {
	text-align: right;
	height: 20px;
	margin: 0 20px;
	padding-top: 20px;
	font-size: 15px;
	color: #919191

}

.output {
	text-align: right;
	height: 60px;
	margin: 10px 20px;
	font-size: 30px;
}

.keyboard {
	margin-top: 10px;
}

.operator, .number, .empty {
	width: 60px;
	height: 60px;
	margin: 2%;
	border-radius: 50%;
	border-width: 0;
	font-weight: bold;
	font-size: 15px;
}


.operator:active, .number:active {
	font-size: 13px;
	margin-bottom: 0;
}

.operator:hover, .number:hover {
	box-shadow: 0 0 1px 2px #ccc;
	transition: .2s ease;
}

.operator:focus, .number:focus {
	outline: none;
}

::-moz-focus-inner {
    border:0;
}

.number, .empty {
	background-color: #fff;
}

.operator, .number {
	cursor: pointer;
}

